clusters/talos-robbinsdale/apps/tailscale/community/tsflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tclip
spec:
  selector:
    app: tclip
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
