clusters/talos-robbinsdale/apps/tailscale/community/tsflow/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tsflow
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "tsflow.rajsingh.info"
    - "tsflow.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tsflow
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
